# git-acp

./: .coderabbit.yaml  .env.example  .gitignore  .markdownlint.json  AGENTS.md  README.md  VERSIONS.md  git-acp.sh  project-overview.md  pyproject.toml  refactor-summary.md  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: codeql.yml  pr-ci.yaml
.windsurf/workflows/: test-dry-run.md
docs/: CHANGELOG.md  release-notes.md
docs/api/: overview.md
docs/getting_started/: installation.md  introduction.md  quick_start.md
docs/tests/: test_ai_utils.md  test_classification.md  test_cli.md  test_constants.md  test_env_config.md  test_formatting.md  test_git_operations.md  test_init_files.md  test_main.md  test_plan.md  test_types.md
docs/usage/: advanced_usage.md  basic_usage.md  installation.md
git_acp/: .env.example  __init__.py  __main__.py  ai_utils.py  classification.py  cli.py  constants.py  formatting.py  git_acp.py  git_operations.py  types.py
git_acp/ai/: __init__.py  ai_utils.py  client.py  commit_prompts.py  commit_prompts_advanced.py  commit_prompts_simple.py  generation.py  pr_prompts.py  pr_prompts_advanced.py  pr_prompts_simple.py  prompts.py
git_acp/cli/: __init__.py  cli.py  commit.py  format_commit.py  formatting.py  helpers.py  interaction.py  interactive_selection.py  main.py  pr.py  workflow.py
git_acp/commit/: __init__.py  builder.py  commit.py  generation.py  prompt_builder.py
git_acp/config/: __init__.py  constants.py  env_config.py  loader.py  settings.py
git_acp/git/: __init__.py  branch.py  classification.py  commit.py  commit_type.py  core.py  diff.py  exceptions.py  file_classifier.py  git_operations.py  history.py  management.py  operations.py  remote.py  runner.py  staging.py  stash.py  status.py  tag.py
git_acp/pr/: __init__.py  builder.py  github.py
git_acp/utils/: __init__.py  file_filter.py  formatting.py  types.py
scripts/: exa-codebase-tree.sh  local-ci.sh  setup-config.py
test-scenarios/: TESTING.md  expected-map.tsv
test-scenarios/chore/: .gitignore  pyproject.toml  requirements.txt  setup.py
test-scenarios/ci/: .gitlab-ci.yml  Jenkinsfile
test-scenarios/ci/.circleci/: config.yml
test-scenarios/ci/.github/workflows/: ci.yml  deploy.yml
test-scenarios/docs/: CHANGELOG.md  README.md
test-scenarios/docs/docs/: api-reference.md  contributing.md  getting-started.md
test-scenarios/feat/src/features/: batch_export.py  notification_service.py  search_engine.py  user_profiles.py  webhook_integration.py
test-scenarios/fix/src/api/: handler.py
test-scenarios/fix/src/auth/: login.py
test-scenarios/fix/src/core/: parser.py
test-scenarios/fix/src/db/: connection.py
test-scenarios/fix/src/utils/: validation.py
test-scenarios/perf/benchmarks/: test_api_latency.py  test_search_perf.py
test-scenarios/perf/profiling/: memory_profile.py
test-scenarios/perf/src/core/: optimized_index.py
test-scenarios/perf/src/db/: query_cache.py
test-scenarios/refactor/src/api/: routes.py
test-scenarios/refactor/src/auth/: session.py
test-scenarios/refactor/src/core/: engine.py
test-scenarios/refactor/src/models/: user.py
test-scenarios/refactor/src/utils/: helpers.py
test-scenarios/revert/: backout_config.yaml  restore_plan.py  revert_fixture.json  rollback-note.md  undo_entry.txt
test-scenarios/style/: .eslintrc  .pylintrc  ruff.toml
test-scenarios/test/tests/: conftest.py  test_api.py  test_auth.py  test_integration.py  test_models.py
tests/: __init__.py  test_ai_utils.py  test_git_operations.py
tests/ai/: test_ai_utils.py  test_client.py
tests/cli/: test_auto_group.py  test_cli.py  test_workflow.py
tests/config/: test_constants.py  test_env_config.py
tests/git/: test_classification.py  test_core.py  test_diff.py  test_file_classifier.py  test_git_operations.py  test_grouping.py  test_history.py  test_management.py  test_staging.py
tests/utils/: test_file_filter.py  test_formatting.py  test_types.py
to-do/: analyze-unused-imports.md
to-do/auto-grouping/: auto-grouping.md
