[project]
name = "git-acp"
version = "0.19.0"
authors = [
    { name = "elvee" },
]
description = "Git Add-Commit-Push automation tool with AI-powered commit messages"
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typing;python_version<'3.7'",
    "click==8.1.8",
    "rich==13.9.4",
    "questionary>=2.1.1",
    "openai==1.59.3",
    "tqdm==4.67.1",
    "python-dotenv==1.0.1",
]

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6.9",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
git-acp = "git_acp.cli:main"

[project.urls]
"Homepage" = "https://github.com/beecave-homelab/git-acp"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["venv/", "docs/"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "N",
    "I",
    "D",
    "DOC",
    "TID",
    "UP",
    "FA",
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--maxfail=1 -q --import-mode=append"
testpaths = ["tests"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
setup-config = "python scripts/setup-config.py"
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."
test = "pytest -q"
test-cov = "pytest --cov=. --cov-report=term-missing:skip-covered --cov-report=xml"
